# PQC-KAT-VALIDATOR

./: .gitignore  DOCUMENTACION.md  README.md  pyproject.toml  requirements.txt
native/: CMakeLists.txt  kat_entropy.c
native/liboqs/: kem_harness.c  sig_harness.c
native/pqclean/: kem_harness.c  sig_harness.c
native/pqcrystals/: sig_harness.c
scripts/: build_liboqs.sh  build_pqclean.sh  build_pqcrystals.sh  fetch_kats.sh
src/: cli.py  harness.py  parser.py  pipeline.py  report.py
